@@ -90,6 +90,14 @@ Skin Default
 #
 SchedulerMaxChildren 3
 
+#
+# This variable controls the character-set for Krang's user interface.
+# Compliant browsers will use this setting to encode data they send to
+# Krang.  NOTE: If your editors use IE 6 on Windows XP and may copy
+# non-ASCII data into Krang then you may need to set this to either
+# "windows-1252" or "utf-8" to work-around a bug in IE 6.
+#
+Charset iso-8859-1
 
 
 ###########################################################################
